# alephFe

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.e2e  Dockerfile.web  TESTING.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.marathon.yml
.github/workflows/: ci.yml
.openspec-evidence/: box-advance-evidence.json
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/investigation/: README.md  gpu-container.sh  gpu-probe.spec.ts  playwright.gpu.config.ts
e2e/tests/: action-key-verify.spec.ts  data-fetch.spec.ts  door-interaction.spec.ts  error-handling.spec.ts  game-start.spec.ts  interaction.spec.ts  runtime-errors.spec.ts  ui-elements.spec.ts  visual-regression.spec.ts  wasm-init.spec.ts  weapon-pointer-lock.spec.ts  webgl-compat.spec.ts
marathon-audio/: Cargo.toml
marathon-audio/src/: ambient.rs  channel.rs  engine.rs  lib.rs  music.rs  spatial.rs  types.rs
marathon-fleet/: Cargo.toml
marathon-fleet/src/: embodiment.rs  event.rs  event_log.rs  interaction.rs  lib.rs  main.rs  placement.rs  projection.rs  reconciler.rs  replay.rs  sse_source.rs  transport.rs
marathon-formats/: Cargo.toml
marathon-formats/src/: error.rs  lib.rs  map.rs  mml.rs  mml_cascade.rs  mml_interpret.rs  physics.rs  plugin.rs  shapes.rs  sounds.rs  tags.rs  test_helpers.rs  types.rs  wad.rs
marathon-formats/tests/: integration_tests.rs  mml_cascade_integration.rs  real_data_tests.rs  scenario_manifest.rs  scenarios.toml
marathon-formats/tests/fixtures/: .gitignore  README.md  sample.mml
marathon-formats/tests/fixtures/sample_plugin/: Plugin.xml
marathon-game/: Cargo.toml
marathon-game/src/: level.rs  main.rs  mesh.rs  render.rs  shader.wgsl  sprite_shader.wgsl  sprites.rs  texture.rs
marathon-game/tests/: e2e_tests.rs  integration.rs
marathon-integration/: Cargo.toml
marathon-integration/src/: lib.rs  types.rs
marathon-integration/src/hud/: health.rs  inventory.rs  mod.rs  motion_sensor.rs  oxygen.rs  pipeline.rs  weapon.rs
marathon-integration/src/input/: action_flags.rs  bindings.rs  context.rs  mod.rs
marathon-integration/src/menu/: load_game.rs  mod.rs  preferences.rs  renderer.rs
marathon-integration/src/modes/: campaign.rs  cooperative.rs  deathmatch.rs  mod.rs
marathon-integration/src/shell/: film.rs  intermission.rs  level.rs  mod.rs  save.rs  states.rs
marathon-integration/src/sprites/: mod.rs
marathon-integration/src/terminal/: images.rs  mod.rs  pages.rs  renderer.rs
marathon-integration/tests/: integration_tests.rs
marathon-sim/: Cargo.toml
marathon-sim/src/: collision.rs  components.rs  fader.rs  fleet_bridge.rs  lib.rs  overhead.rs  render_snapshot.rs  tick.rs  world.rs
marathon-sim/src/combat/: damage.rs  mod.rs  projectiles.rs  weapons.rs
marathon-sim/src/monster/: ai.rs  mod.rs  pathfinding.rs
marathon-sim/src/player/: inventory.rs  mod.rs  movement.rs
marathon-sim/src/world_mechanics/: action_key.rs  items.rs  lights.rs  media.rs  mod.rs  panels.rs  pickup.rs  platforms.rs
marathon-sim/tests/: integration.rs  render_snapshot_determinism.rs
marathon-viewer/: Cargo.toml
marathon-viewer/src/: level.rs  main.rs  mesh.rs  render.rs  shader.wgsl  texture.rs  transfer.rs
marathon-viewer/tests/: e2e_tests.rs
marathon-web/: Cargo.toml
marathon-web/src/: level.rs  lib.rs  mesh.rs  poly_data.rs  render.rs  shader.wgsl  sprite_shader.wgsl  sprites.rs  texture.rs
marathon-web/static/: index.html
marathon-web/tests/: buffer_stability.rs  common_map.rs  dynamic_geometry.rs  render_snapshot_upload.rs  wasm.rs
openspec/changes/agent-dashboard-mode-a/: README.md  design.md  (+2 more)
scripts/: ag-restart.sh  ag-shutdown.sh  ag-startup.sh
sync/: CONTRACT.md  LEDGER-aleph.md  STATUS-CONVERGED.md  agcli-0001-question-worldsnapshot-entity-fields.md  agcli-0002-question-daemon-dual-source-join.md  agcli-0003-question-reconciler-entitydesc-shape.md  agcli-0004-question-embodiment-axes-channels.md  agcli-0005-question-world-mcp-gateway-surface.md  agcli-0006-question-gameaction-wire-shape.md  agcli-0007-question-laneid-opaque-vs-readable.md  agcli-0008-answer-sessionid-timing.md  agcli-0009-answer-cadence-burst.md  agcli-0010-answer-progressphase-scope.md  agcli-0011-answer-sse-endpoint-auth-cors.md  agcli-0012-answer-careverb-wire-hmac.md  agcli-0013-answer-lease-key-colocation.md  agcli-0014-answer-replay-anchors-seq.md  agcli-0015-ack-freeze-d1-d2.md  agcli-0016-proposal-resolve-d3.md  agcli-0017-proposal-freeze-naming-transport.md  agcli-0018-status-converged.md  agcli-0019-meta-protocol-vs-sota.md  agcli-0020-proposal-mqtt-a2a-transport.md  agcli-0021-answer-mqtt-retained-lwt.md  agcli-0022-answer-mqtt-live-replay-seq.md  agcli-0023-answer-mqtt-topic-aoi-acl.md  agcli-0024-answer-mqtt-qos-reqresp.md  agcli-0025-ack-tiered-transport.md  agcli-0026-meta-capstone.md  agcli-0027-ack-modeb-answers.md  agcli-0028-status-round2-converged.md
vault/: README.md
vault/alephone-reference/: alephone-source-structure.md  community-resources.md  file-format-specifications.md  game-mechanics-reference.md  index.md  marathon-series-differences.md
vault/architecture/: crate-structure.md  data-flow.md  ecs-architecture.md  game-loop-and-state-machine.md  index.md  rendering-pipeline.md
vault/tier-1-game-loop/: e2e-tdd-framework.md  full-screen-effects.md  golden-test-levels.md  index.md  item-pickup-system.md  platform-mechanics.md  projectile-physics.md  scenario-feature-matrix.md  weapon-behaviors.md
vault/tier-2-visual-audio/: dynamic-lighting.md  glow-transfer-modes.md  index.md  infravision-mode.md  liquid-surface-rendering.md  overhead-map-automap.md  visual-effects-vfx.md
vault/tier-3-content-pipeline/: community-content-ecosystem.md  index.md  lua-in-rust-options.md  lua-vm-integration.md  lua-wasm-architecture.md  mml-override-system.md  plugin-system-patching.md  shapes-file-patching.md
vault/tier-4-multiplayer/: alephone-network-architecture.md  control-remapping.md  film-replay-system.md  game-mode-implementations.md  index.md  network-sync-for-rust.md  webrtc-browser-multiplayer.md
(+314 files in other folders)
