[package]
name = "marathon-fleet"
version = "0.1.0"
edition = "2021"

[lib]
name = "marathon_fleet"
path = "src/lib.rs"

[[bin]]
name = "marathon-fleet"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP client for the SSE source (box 2.2). The `LiveEventSource` trait
# is deliberately synchronous, so the snapshot fetch + SSE follow use a blocking
# client rather than an async runtime. `tls` brings rustls so no system OpenSSL
# is required (loopback-only today, but keeps the dep self-contained).
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
