[package]
name = "marathon-fleet"
version = "0.1.0"
edition = "2021"

[lib]
name = "marathon_fleet"
path = "src/lib.rs"

[[bin]]
name = "marathon-fleet"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP client for the SSE source (box 2.2). The `LiveEventSource` trait
# is deliberately synchronous, so the snapshot fetch + SSE follow use a blocking
# client rather than an async runtime. The source is loopback-only (http://:9091),
# so NO TLS feature: the `tls` feature pulls rustls→ring, which needs clang at
# build time and breaks the WASM/web Docker image (which lacks it). Plain HTTP.
ureq = { version = "2", default-features = false, features = ["json"] }
