[package]
name = "marathon-viewer"
version = "0.1.0"
edition = "2021"
description = "3D level viewer for Marathon (Aleph One) scenarios using wgpu"
license = "MIT OR Apache-2.0"
repository = "https://github.com/llambit/alephone-rust"

[dependencies]
marathon-formats = { path = "../marathon-formats" }
wgpu = "22"
winit = "0.30"
pollster = "0.4"
glam = "0.29"
clap = { version = ">=4.0, <4.6", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
