[package]
name = "marathon-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
marathon-formats = { path = "../marathon-formats" }
marathon-sim = { path = "../marathon-sim" }
wgpu = "24"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "Response",
    "Headers",
    "KeyboardEvent",
    "MouseEvent",
    "console",
] }
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
